chore: COH is enabled by default in 27